--- a/src/index.scss
+++ b/src/index.scss
@@ -32,13 +32,12 @@ html {
   -moz-animation: Coolgradient 41s linear infinite;
   -o-animation: Coolgradient 41s linear infinite;
   animation: Coolgradient 41s linear infinite;
+  overflow-x: hidden;
   
 }
 
  body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  
   // background-color: #1e2124;
   font-family: 'Orbitron', sans-serif;
   color: $black;
